add profile picture and update description

--- a/styles.scss
+++ b/styles.scss
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  text-align: left !important;
+  text-align: center !important;
 }
 
 /* Increase icon and text size inside about links */
